# 3520-graphing-wrapper

./: CMakeLists.txt  README.md  get_weather.ipynb  get_weather.py  main.cpp  output_json.json  regression_nn.keras  simple-nn.py  worldcities_temp.csv
cmake/Hunter/: config.cmake
include/: geoGrapher.h
lib/include/: geoGrapher.h
lib/src/: geoGrapher.cpp
src/: geoGrapher.cpp
